<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    android:background="@color/white"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:padding="@dimen/_5sdp">


    <LinearLayout

        android:id="@+id/llRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+0.0"
            android:textAppearance="@style/TextAppearance.Medium"
            android:textColor="@color/green"
            android:textSize="@dimen/_14sdp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_hbcu"
            android:textAppearance="@style/TextAppearance.Medium"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_11sdp"></TextView>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/llRight"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_daily_mining"
            android:textAppearance="@style/TextAppearance.Medium"
            android:textColor="@color/grayText"
            android:textSize="@dimen/_13sdp"></TextView>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_currently_mining"
            android:textColor="@color/grayText"
            android:textSize="@dimen/_11sdp"></TextView>
    </LinearLayout>


</RelativeLayout>