<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SplashActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main"></ImageView>

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/margin_common"
        android:background="@drawable/bg_yellow_circle"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        app:tint="@color/white"></ImageView>

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivBack"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_verification_code"
            android:textAppearance="@style/TextAppearance.Bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/lbl_digit_code_info"
            android:textAppearance="@style/TextAppearance.Medium"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"></TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBottom"
        android:layout_below="@id/llHeader"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_verification_icon"></ImageView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_25sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_20sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_verification_code"
                        android:textAppearance="@style/TextAppearance.Medium"
                        android:textColor="@color/app_color_primary"
                        android:textSize="@dimen/_14sdp"></TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/margin_common"
                        android:gravity="center_vertical">

                        <EditText
                            android:id="@+id/etOtp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@null"
                            android:hint="@string/lbl_enter_code"
                            android:imeOptions="actionDone"
                            android:inputType="phone"
                            android:maxLength="6"
                            android:textColor="@color/app_color_primary"
                            android:textSize="@dimen/_12sdp"></EditText>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_yellow_rounded_btn"
            android:text="@string/lbl_confirm"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.Medium"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"></Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_common"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_didnt_get_code"
                android:textAppearance="@style/TextAppearance.Light"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"></TextView>

            <TextView
                android:id="@+id/tvResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="@dimen/_5sdp"
                android:text="@string/lbl_resend"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_13sdp"></TextView>
        </LinearLayout>

        <View
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_5sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/bg_white_rounded"></View>
    </LinearLayout>
    <include
        android:layout_below="@+id/ivBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/layout_progress_bar"></include>
 </RelativeLayout>