<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/margin_common"
    android:paddingRight="@dimen/margin_common"
    tools:context=".activity.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_common"
            android:background="@drawable/bg_border_rounded_primary_btn"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/llRegional"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_primary_left"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp">

                <TextView
                    android:id="@+id/tvRegional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl_regional"
                    android:textAppearance="@style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />


                <ImageView
                    android:id="@+id/ivFlag"
                    android:visibility="gone"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:src="@drawable/flag_india"></ImageView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llGlobal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp">

                <TextView
                    android:id="@+id/tvGlobal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl_global"
                    android:textAppearance="@style/TextAppearance.Medium"
                    android:textColor="@color/app_color_primary"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvNo"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/margin_common"
            android:layout_height="wrap_content"
            android:text="@string/lbl_empty_record"></TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_common"></androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</RelativeLayout>